--- a/collisionHook/pom.xml
+++ b/collisionHook/pom.xml
@@ -29,20 +29,20 @@
   </parent>
 
   <properties>
-    <bundle.symbolicName>org.openengsb.framework.edb.preCommitHook</bundle.symbolicName>
-    <bundle.namespace>org.openengsb.framework.edb.preCommitHook</bundle.namespace>
-    <domain.name>PreCommitHook</domain.name>
+    <bundle.symbolicName>org.openengsb.framework.edb.collisionHook</bundle.symbolicName>
+    <bundle.namespace>org.openengsb.framework.edb.collisionHook</bundle.namespace>
+    <domain.name>collisionHook</domain.name>
   </properties>
 
-  <groupId>org.openengsb.framework.edb.preCommitHook</groupId>
-  <artifactId>org.openengsb.framework.edb.preCommitHook</artifactId>
+  <groupId>org.openengsb.framework.edb.collisionHook</groupId>
+  <artifactId>org.openengsb.framework.edb.collisionHook</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <name>OpenEngSB :: EDB :: PreCommitHook</name>
+  <name>OpenEngSB :: EDB :: CollisionHook</name>
 
   <packaging>bundle</packaging>
 
-  <description>This OSGI Service provides </description>
+  <description>This OSGI Service provides the functionality to query an external index.</description>
 
 
   <build>
@@ -58,7 +58,7 @@
         <filtering>true</filtering>
         <includes>
           <include>**/*.info</include>
-          <include>OSGI-INF/blueprint/preCommitHook-context.xml</include>
+          <include>OSGI-INF/blueprint/collisionHook-context.xml</include>
         </includes>
       </resource>
     </resources>
