--- a/edbHooks/pom.xml
+++ b/edbHooks/pom.xml
@@ -29,20 +29,20 @@
   </parent>
 
   <properties>
-    <bundle.symbolicName>org.openengsb.framework.edb.edbHook</bundle.symbolicName>
-    <bundle.namespace>org.openengsb.framework.edb.edbHook</bundle.namespace>
+    <bundle.symbolicName>org.openengsb.framework.edb.hooks</bundle.symbolicName>
+    <bundle.namespace>org.openengsb.framework.edb.hooks</bundle.namespace>
     <domain.name>edbHook</domain.name>
   </properties>
 
-  <groupId>org.openengsb.framework.edb.edbHook</groupId>
-  <artifactId>org.openengsb.framework.edb.edbHook</artifactId>
+  <groupId>org.openengsb.framework.edb.hooks</groupId>
+  <artifactId>org.openengsb.framework.edb.hooks</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <name>OpenEngSB :: EDB :: EDBHook</name>
+  <name>OpenEngSB :: EDB :: EDBHooks</name>
 
   <packaging>bundle</packaging>
 
-  <description>This OSGI Service defines several similarity indexes and proveide some methods to query them.</description>
+  <description>This OSGI Service defines several similarity indexes and provides some methods to query and update them.</description>
 
 
   <build>
@@ -58,7 +58,7 @@
         <filtering>true</filtering>
         <includes>
           <include>**/*.info</include>
-          <include>OSGI-INF/blueprint/edbHook-context.xml</include>
+          <include>OSGI-INF/blueprint/edbPostCommitHook-context.xml</include>
         </includes>
       </resource>
     </resources>
