--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,15 @@
     <bundle.symbolicName>org.openengsb.framework.edb.hooks</bundle.symbolicName>
     <bundle.namespace>org.openengsb.framework.edb.hooks</bundle.namespace>
     <domain.name>edbHook</domain.name>
+    <current.version>1.0.0-SNAPSHOT</current.version>
+    <openengsb.framework.version>3.0.0-SNAPSHOT</openengsb.framework.version>
+    <similarity.framework.version>1.0.0-SNAPSHOT</similarity.framework.version>
+    <slf4j.version>1.6.4</slf4j.version>  
   </properties>
 
   <groupId>org.openengsb.framework.edb.hooks</groupId>
   <artifactId>org.openengsb.framework.edb.hooks</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>${current.version}</version>
 
   <name>OpenEngSB :: EDB :: EDBHooks</name>
 
@@ -105,27 +109,32 @@
     <dependency>
       <groupId>org.openengsb.framework</groupId>
       <artifactId>org.openengsb.framework.api</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>${openengsb.framework.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.openengsb.framework</groupId>
       <artifactId>org.openengsb.framework.common</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>${openengsb.framework.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.openengsb.framework</groupId>
       <artifactId>org.openengsb.framework.test</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>${openengsb.framework.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.openengsb.similarity</groupId>
       <artifactId>org.openengsb.similarity</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>${similarity.framework.version}</version>
       <scope>provided</scope>
-    </dependency>    
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>        
   </dependencies>
 
   <repositories>
